# catgram

./: .gitignore  README.md  pyproject.toml
catgram/: __init__.py  category_tree.py  term_graph.py
catgram/ccg/: candc_ignore.py  dependencies.py  heads.py
catgram/cli/: ccg_depeval.py  ccg_roots.py
