[tool.poetry]
name = "catgram"
version = "0.3.0"
description = "Basic tools for working with categorial grammars"
license = "Apache-2.0"
authors = ["Aditya Bhargava <aditya@cs.toronto.edu>"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    ]
readme = "README.md"
repository = "https://github.com/rightaditya/catgram"

[tool.poetry.dependencies]
python = "^3.10"
lambda-calculus = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[tool.poetry.scripts]
ccg_depeval = 'catgram.cli.ccg_depeval:main'
ccg_roots = 'catgram.cli.ccg_roots:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
